# NFL_thing

./: .breakpoints  Main_firstTry.py  SudoCode  back (3).pxz  back(4).pxz  back(5).pxz  front (3).pxz  front(4).pxz  front.pxz  main.py  pyproject.toml  ticket_back(4)pxz  ticket_front(4).pxz
