[tool.poetry]
name = "nflthing"
version = "0.1.0"
description = "for a nfl funraiser"
authors = ["bacon (Landon Bakken)"]

[tool.poetry.dependencies]
python = "^3.8"
git42 = "^2021.1.31"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
